# AtomicMem

./: CMakeLists.txt  TODO  build.bat
.build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Memory.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
.build/AtomicMem/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AtomicMem.sln  AtomicMem.vcxproj  AtomicMem.vcxproj.filters  MemoryPoolTests.vcxproj  MemoryPoolTests.vcxproj.filters  cmake_install.cmake
.build/AtomicMem/AtomicMem.dir/Release/AtomicMem.tlog/: AtomicMem.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
.build/AtomicMem/MemoryPoolTests.dir/Release/: MemoryPoolTests.exe.recipe
.build/AtomicMem/MemoryPoolTests.dir/Release/MemoryPoolTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
.build/AtomicMem/Release/: AtomicMem.lib
.build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
.build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  (+2 more)
.build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
AtomicMem/: CMakeLists.txt
AtomicMem/include/AtomicMem/: AtomicMem.hpp
AtomicMem/include/AtomicMem/Allocators/: Allocator.hpp  MemoryPool.hpp
AtomicMem/include/AtomicMem/DataStructs/: LinkedList.hpp
AtomicMem/src/Allocators/: MemoryPool.cpp
AtomicMem/tests/: main.cpp
(+4 files in other folders)
